Calcular modified name bottom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input placeholder="Materia 3" class="materias" id="materia3">
             <input placeholder="Materia 4" class="materias" id="materia4">
             <input placeholder="Materia 5" class="materias" id="materia5">
-            <button type="submit">Calular</button>
+            <button type="submit">Calcular</button>
         </form>
 
     </div>
